# vectordb

./: LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  setup.py
config/: __init__.py  default_config.yaml  settings.py
docs/: api_reference.md  architecture.md  indexing_guide.md  performance.md
examples/: api_client.py  basic_usage.py  hnsw_usage.py  image_similarity.py  index_comparison.py  index_usage.py  ivf_usage.py  rag_example.py  semantic_search.py  storage_usage.py
notebooks/: 01_getting_started.ipynb  02_index_comparison.ipynb  03_performance_tuning.ipynb
tests/: __init__.py  conftest.py
tests/benchmark/: __init__.py  bench_indexing.py  bench_recall.py  bench_search.py
tests/integration/: __init__.py  test_database.py  test_persistence.py  test_queries.py
tests/unit/: test_collection.py  test_database.py  test_flat_index.py  test_hnsw_index.py  test_ivf_index.py  test_metrics.py  test_server.py  test_storage.py  test_vector.py
vectordb/: __init__.py
vectordb/core/: __init__.py  collection.py  database.py  exceptions.py  vector.py
vectordb/distance/: __init__.py  batch.py  gpu.py  metrics.py  registry.py  simd.py
vectordb/index/: HNSW.txt  IVF.txt  __init__.py  base.py  flat.py  hnsw.py  hybrid.py  ivf.py  pq.py
vectordb/query/: __init__.py  executor.py  filters.py  parser.py  planner.py
vectordb/server/: __init__.py  __main__.py  app.py  config.py  dependencies.py  middleware.py  models.py  routes.py
vectordb/storage/: __init__.py  base.py  disk.py  format.py  memory.py  mmap.py  serialization.py
(+10 files in other folders)
